Prompt for homescreen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PWA Testing</title>
     <link rel="manifest" href="/manifest.json">
+
+    <!--Tags for apple devices-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="blue">
+    <meta name="apple-mobile-web-app-title" content="With Manifest">
+    <link rel="apple-touch-icon" href="/src/icons/apple-icon-152x152.png" sizes="152x152">
 </head>
 <body>
     <h1>Testing PWA</h1>
