--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>Testing PWA</h1>
     <p>I added this line to page</p>
+    <p>I am adding this line to test git changes from repo</p>
 
     <script src="main.js"></script>
     
